--- a/kubernetes/apps/observability/exporters/kustomization.yaml
+++ b/kubernetes/apps/observability/exporters/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./bazarr-exporter/ks.yaml
-  - ./blackbox-exporter/ks.yaml
+  # - ./blackbox-exporter/ks.yaml
   - ./dcgm-exporter/ks.yaml
   - ./lidarr-exporter/ks.yaml
   - ./prowlarr-exporter/ks.yaml
