--- a/kubernetes/apps/observability/exporters/qbittorrent-exporter/app/resources/grafana-dashboard.yaml
+++ b/kubernetes/apps/observability/exporters/qbittorrent-exporter/app/resources/grafana-dashboard.yaml
@@ -10,55 +10,6 @@ metadata:
 data:
   qbittorrent-exporter.json: |-
     {
-      "__inputs": [
-        {
-          "name": "DS_PROMETHEUS",
-          "label": "Prometheus",
-          "description": "",
-          "type": "datasource",
-          "pluginId": "prometheus",
-          "pluginName": "Prometheus"
-        }
-      ],
-      "__elements": {},
-      "__requires": [
-        {
-          "type": "panel",
-          "id": "gauge",
-          "name": "Gauge",
-          "version": ""
-        },
-        {
-          "type": "grafana",
-          "id": "grafana",
-          "name": "Grafana",
-          "version": "11.2.2+security-01"
-        },
-        {
-          "type": "panel",
-          "id": "piechart",
-          "name": "Pie chart",
-          "version": ""
-        },
-        {
-          "type": "datasource",
-          "id": "prometheus",
-          "name": "Prometheus",
-          "version": "1.0.0"
-        },
-        {
-          "type": "panel",
-          "id": "stat",
-          "name": "Stat",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "timeseries",
-          "name": "Time series",
-          "version": ""
-        }
-      ],
       "annotations": {
         "list": [
           {
@@ -84,14 +35,13 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
-      "id": null,
+      "id": 250,
       "links": [],
-      "liveNow": false,
       "panels": [
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -161,12 +111,12 @@ data:
             "textMode": "auto",
             "wideLayout": true
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "exemplar": false,
@@ -185,7 +135,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -249,12 +199,12 @@ data:
             "textMode": "auto",
             "wideLayout": true
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "qbittorrent_connected{server=\"$server\"} - qbittorrent_firewalled{server=\"$server\"}",
@@ -271,7 +221,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -332,12 +282,12 @@ data:
             "textMode": "auto",
             "wideLayout": true
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "qbittorrent_dht_nodes{server=\"$server\"}",
@@ -353,7 +303,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -395,12 +345,12 @@ data:
             "textMode": "auto",
             "wideLayout": true
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "sum by (app) (qbittorrent_up_info_data_total{server=\"$server\"})",
@@ -412,7 +362,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "sum by (app) (qbittorrent_alltime_ul_total{server=\"$server\"})",
@@ -429,7 +379,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -471,12 +421,12 @@ data:
             "textMode": "auto",
             "wideLayout": true
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "sum by (app) (qbittorrent_dl_info_data_total{server=\"$server\"})",
@@ -488,7 +438,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "sum by (app) (qbittorrent_alltime_dl_total{server=\"$server\"})",
@@ -505,7 +455,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -547,12 +497,12 @@ data:
             "textMode": "auto",
             "wideLayout": true
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "(sum by (app) (qbittorrent_alltime_ul_total{server=\"$server\"})) / (sum by (app) (qbittorrent_alltime_dl_total{server=\"$server\"}))",
@@ -568,7 +518,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -615,12 +565,12 @@ data:
             "showThresholdMarkers": true,
             "sizing": "auto"
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "rate(qbittorrent_dl_info_data_total{server=\"$server\"}[2m])",
@@ -636,7 +586,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -683,12 +633,12 @@ data:
             "showThresholdMarkers": true,
             "sizing": "auto"
           },
-          "pluginVersion": "11.2.2+security-01",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "rate(qbittorrent_up_info_data_total{server=\"$server\"}[2m])",
@@ -705,7 +655,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -778,16 +728,17 @@ data:
               "showLegend": true
             },
             "tooltip": {
+              "hideZeros": false,
               "mode": "multi",
               "sort": "none"
             }
           },
-          "pluginVersion": "10.2.3",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "rate(qbittorrent_dl_info_data_total{server=\"$server\"}[2m])",
@@ -799,7 +750,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "rate(qbittorrent_up_info_data_total{server=\"$server\"}[2m])",
@@ -815,7 +766,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -888,16 +839,17 @@ data:
               "showLegend": true
             },
             "tooltip": {
+              "hideZeros": false,
               "mode": "multi",
               "sort": "none"
             }
           },
-          "pluginVersion": "10.2.3",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "sum(qbittorrent_torrents_count{category=~\"${categories}\", status!=\"complete\", server=\"$server\"}) by (status)",
@@ -913,7 +865,7 @@ data:
         {
           "datasource": {
             "type": "prometheus",
-            "uid": "${DS_PROMETHEUS}"
+            "uid": "prometheus"
           },
           "fieldConfig": {
             "defaults": {
@@ -953,16 +905,17 @@ data:
               "values": false
             },
             "tooltip": {
+              "hideZeros": false,
               "mode": "single",
               "sort": "none"
             }
           },
-          "pluginVersion": "7.2.0",
+          "pluginVersion": "11.5.2",
           "targets": [
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${DS_PROMETHEUS}"
+                "uid": "prometheus"
               },
               "editorMode": "code",
               "expr": "sum(qbittorrent_torrents_count{category=~\"${categories}\",status!=\"complete\",server=\"$server\"}) by (category)",
@@ -976,39 +929,39 @@ data:
           "type": "piechart"
         }
       ],
+      "preload": false,
       "refresh": "10s",
-      "revision": 1,
-      "schemaVersion": 39,
+      "schemaVersion": 40,
       "tags": [],
       "templating": {
         "list": [
           {
-            "current": {},
-            "hide": 0,
+            "current": {
+              "text": "Prometheus",
+              "value": "prometheus"
+            },
             "includeAll": false,
             "label": "Data Source",
-            "multi": false,
             "name": "data_source",
             "options": [],
             "query": "prometheus",
-            "queryValue": "",
             "refresh": 1,
             "regex": "",
-            "skipUrlSync": false,
             "type": "datasource"
           },
           {
             "allValue": ".*",
-            "current": {},
+            "current": {
+              "text": "qbittorrent.downloads.svc.cluster.local:80",
+              "value": "qbittorrent.downloads.svc.cluster.local:80"
+            },
             "datasource": {
               "type": "prometheus",
-              "uid": "${DS_PROMETHEUS}"
+              "uid": "prometheus"
             },
             "definition": "label_values(qbittorrent_up,server)",
-            "hide": 0,
             "includeAll": false,
             "label": "Server",
-            "multi": false,
             "name": "server",
             "options": [],
             "query": {
@@ -1018,22 +971,23 @@ data:
             },
             "refresh": 1,
             "regex": "",
-            "skipUrlSync": false,
-            "sort": 0,
-            "tagValuesQuery": "",
-            "tagsQuery": "",
-            "type": "query",
-            "useTags": false
+            "type": "query"
           },
           {
             "allValue": ".*",
-            "current": {},
+            "current": {
+              "text": [
+                "All"
+              ],
+              "value": [
+                "$__all"
+              ]
+            },
             "datasource": {
               "type": "prometheus",
-              "uid": "${DS_PROMETHEUS}"
+              "uid": "prometheus"
             },
             "definition": "label_values(qbittorrent_torrents_count{server=\"$server\"},category)",
-            "hide": 0,
             "includeAll": true,
             "label": "Categories",
             "multi": true,
@@ -1046,12 +1000,7 @@ data:
             },
             "refresh": 1,
             "regex": "",
-            "skipUrlSync": false,
-            "sort": 0,
-            "tagValuesQuery": "",
-            "tagsQuery": "",
-            "type": "query",
-            "useTags": false
+            "type": "query"
           }
         ]
       },
@@ -1062,7 +1011,7 @@ data:
       "timepicker": {},
       "timezone": "",
       "title": "qBittorrent",
-      "uid": "486d7505-90f3-41f6-9994-5fc7334ec11a",
+      "uid": "938d8ec4-500e-459b-96d5-a6da48bf1be4",
       "version": 1,
       "weekStart": ""
     }
