--- a/kubernetes/apps/observability/exporters/qbittorrent-exporter/app/kustomization.yaml
+++ b/kubernetes/apps/observability/exporters/qbittorrent-exporter/app/kustomization.yaml
@@ -3,5 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./resources/grafana-dashboard.yaml
+  # - ./resources/grafana-dashboard.yaml
   - ./helmrelease.yaml
