fix(dragonfly): enable grafana dashboard using chart

--- a/kubernetes/apps/database/dragonfly/app/helmrelease.yaml
+++ b/kubernetes/apps/database/dragonfly/app/helmrelease.yaml
@@ -25,5 +25,10 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    grafanaDashboard:
+      enabled: true
+      folder: Database
+      annotations:
+        name: grafana_folder
     serviceMonitor:
       enabled: false
