--- a/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -15,6 +15,7 @@ instance:
     url: https://github.com/pwyde/home-ops.git
     ref: refs/heads/main
     path: kubernetes/flux/cluster
+    interval: 1h
   commonMetadata:
     labels:
       app.kubernetes.io/name: flux
