feat: test tailscale ingress

--- a/kubernetes/components/substitutions/cluster-secrets.sops.yaml
+++ b/kubernetes/components/substitutions/cluster-secrets.sops.yaml
@@ -7,6 +7,7 @@ stringData:
     SECRET_EMAIL: ENC[AES256_GCM,data:byKsZgLuKsOpC7kang==,iv:Kqbn2XlY3jt2Ht1p27KLymyfPbkxTtgWJqiWect/GZU=,tag:7pgPYcgX6902YN7JdSw1wA==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:32I13WpDrKy3wOSco+nNKMj2kdcuKH+97jr4GUAw9bu1r2Om,iv:5b1U1TrmzExDlP6mSo5kG2zS8WgEioW37fs8jrt6gxE=,tag:SaulV+U5pt8tf9/jxLg2dA==,type:str]
     SECRET_TAILSCALE_ADMIN: ENC[AES256_GCM,data:Y7lV74tCpKKySqAm,iv:eRbSznekYKvKLQUTaL83ey1lpWfminFz4Q2zdJ/Ym6s=,tag:TZcSi5v5xuByVFoOQHpGVg==,type:str]
+    SECRET_TAILSCALE_DOMAIN: ENC[AES256_GCM,data:l+9FZIuEyyEvMDQ5FIqJW075zqUl,iv:cSnWvfmyCa5+BMNoVebWp7OH5SrIRdgkjZ9IIvQGxDc=,tag:sCs186m/ZUhg3tbI5s8kAQ==,type:str]
     SECRET_NAS_IP: ENC[AES256_GCM,data:S89CCLY3shUYhQ==,iv:qVuglqCCIuxr3MaDv6OjgYIF3F/e5bM7aclBfM5s3Js=,tag:sSbl1BNMxRlHOdWrQxcwVQ==,type:str]
     SECRET_NFS_PATH_IMMICH: ENC[AES256_GCM,data:5hpt0M33iZBbKaYw6aTgg1396kE=,iv:X3fQKL4eWsgmeMFb8NV2agHvgI4YJ8l4bfnhOghILo4=,tag:t8zmU4/aBFGoBGmdcxRnOg==,type:str]
     SECRET_NFS_PATH_MEDIA: ENC[AES256_GCM,data:bVA9rM9zTQnPa80ANLOlSlkhdeI=,iv:tfiZhLjWMtWCpyIfBa++uTrHesMtUrH2Rwk42ugoIEg=,tag:G/pEBe2YZG4BFu/0AjrKxg==,type:str]
@@ -29,8 +30,8 @@ sops:
             Vmg3V1hoRzdEMHVwblhEazR2ZFlNTlEKrR8H1dmbtc1tNeVKD9BSu2kY7xgRH+uo
             Xct3NGYDiJqr9NlrJrV6LbsB6RliBRhjkjt8mfiFn6pGMIj5wPnRpw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-26T12:54:55Z"
-    mac: ENC[AES256_GCM,data:h8snFYQFktiTNPhdPfPDb+sEsDnlM3Qox+NFbae4wXzUKzMDzomTnZeuFV59LuCTLnaZCxZeKeY34N9LEP/M7dZv52DvjesZkUtCAAJpCMJbczzs+ZUTYxLJrZbJy5qJL//+xdh51Y4BpxUjuTkSfWB402K4HaESFqzjbvBCc7A=,iv:CZkM4vVaA68P/D5SVo3bt/D03dJBH36PkiEOex6B32w=,tag:ntA+K2v0SrkIKL05Vi0SaQ==,type:str]
+    lastmodified: "2025-02-27T13:31:25Z"
+    mac: ENC[AES256_GCM,data:7LlxGDlr5+B90/Uq0MGjZUQED6IdBTew1CGf6a+pZNm7Y6JBNLc6GKcOm//J4cqpxxtnDVcTOIVEGdNcCWmW9gDuMYZOW04vsCjgw04uJ7vhX0sioNjghGp01mI063JDu9Xx/zsvVG4dRuUQN9LG2Os6UAQAfxFcobyTdELsPwQ=,iv:h/bfcNQMFlq6QpMCE9RMk5JIVkrvKoGgTY77Njcsn4I=,tag:/zZtTJyp1aDVjQjx1oCVeQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     mac_only_encrypted: true
