--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -105,6 +105,18 @@ spec:
         tls:
           - hosts:
               - *host
+      ts:
+        className: tailscale
+        hosts:
+          - host: &tsHost "{{ .Release.Name }}.${SECRET_TAILSCALE_DOMAIN}"
+            paths:
+              - path: /
+                service:
+                  identifier: app
+                  port: http
+        tls:
+          - hosts:
+            - *tsHost
     persistence:
       config:
         existingClaim: ${VOLSYNC_CLAIM}
