--- a/kubernetes/apps/network/tailscale-operator/ks.yaml
+++ b/kubernetes/apps/network/tailscale-operator/ks.yaml
@@ -22,27 +22,27 @@ spec:
   targetNamespace: *namespace
   timeout: 5m
   wait: false
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: &app tailscale-connectors
-  namespace: &namespace network
-spec:
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
-  dependsOn:
-    - name: tailscale-operator
-      namespace: network
-  interval: 30m
-  path: ./kubernetes/apps/network/tailscale-operator/connectors
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  targetNamespace: *namespace
-  timeout: 5m
-  wait: true
+# ---
+# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: &app tailscale-connectors
+#   namespace: &namespace network
+# spec:
+#   commonMetadata:
+#     labels:
+#       app.kubernetes.io/name: *app
+#   dependsOn:
+#     - name: tailscale-operator
+#       namespace: network
+#   interval: 30m
+#   path: ./kubernetes/apps/network/tailscale-operator/connectors
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#     namespace: flux-system
+#   targetNamespace: *namespace
+#   timeout: 5m
+#   wait: true
