chore: move ClusterSecretStore to onepassword ks

--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -14,7 +14,7 @@ spec:
       namespace: storage
     - name: kube-prometheus-stack-crds
       namespace: observability
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/observability/kube-prometheus-stack/app
