--- a/kubernetes/apps/database/dragonfly/ks.yaml
+++ b/kubernetes/apps/database/dragonfly/ks.yaml
@@ -33,7 +33,7 @@ spec:
   dependsOn:
     - name: dragonfly
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/database/dragonfly/cluster
