--- a/kubernetes/apps/downloads/pinchflat/ks.yaml
+++ b/kubernetes/apps/downloads/pinchflat/ks.yaml
@@ -12,7 +12,7 @@ spec:
   components:
     - ../../../../components/volsync
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
     - name: volsync
       namespace: storage
