--- a/kubernetes/apps/network/ingress-nginx/ks.yaml
+++ b/kubernetes/apps/network/ingress-nginx/ks.yaml
@@ -11,7 +11,7 @@ spec:
   dependsOn:
     - name: cert-manager-certificates
       namespace: security
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/network/ingress-nginx/external
@@ -37,7 +37,7 @@ spec:
   dependsOn:
     - name: cert-manager-certificates
       namespace: security
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/network/ingress-nginx/internal
