--- a/kubernetes/apps/observability/exporters/sonarr-exporter/ks.yaml
+++ b/kubernetes/apps/observability/exporters/sonarr-exporter/ks.yaml
@@ -12,7 +12,7 @@ spec:
   dependsOn:
     - name: sonarr
       namespace: media
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/observability/exporters/sonarr-exporter/app
