--- a/kubernetes/apps/security/authelia/ks.yaml
+++ b/kubernetes/apps/security/authelia/ks.yaml
@@ -14,7 +14,7 @@ spec:
       namespace: database
     - name: dragonfly-cluster
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/security/authelia/app
