--- a/kubernetes/apps/security/cert-manager/ks.yaml
+++ b/kubernetes/apps/security/cert-manager/ks.yaml
@@ -33,7 +33,7 @@ spec:
   dependsOn:
     - name: cert-manager
       namespace: security
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   healthCheckExprs:
     - apiVersion: cert-manager.io/v1
@@ -64,7 +64,7 @@ spec:
   dependsOn:
     - name: cert-manager-issuers
       namespace: security
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   healthCheckExprs:
     - apiVersion: cert-manager.io/v1
