--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -16,7 +16,7 @@ spec:
       namespace: database
     - name: dragonfly-cluster
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: security
   interval: 30m
   path: ./kubernetes/apps/self-hosted/immich/app
