chore: new helmfile structure for flux apps

--- a/kubernetes/apps/flux-system/flux-instance/app/helm/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helm/values.yaml
@@ -22,7 +22,7 @@ instance:
   kustomize:
     kustomize:
     patches:
-      # Add SOPS decryption to Kustomizations.
+      # Add SOPS decryption to 'flux-system' Kustomizations.
       - patch: |
           - op: add
             path: /spec/decryption
