--- a/kubernetes/apps/flux-system/kustomization.yaml
+++ b/kubernetes/apps/flux-system/kustomization.yaml
@@ -10,4 +10,5 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
+  - ./flux-instance/ks.yaml
   - ./flux-operator/ks.yaml
