--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -3,14 +3,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app flux-operator
+  name: &app flux-instance
   namespace: &namespace flux-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword
+      namespace: security
   interval: 30m
-  path: ./kubernetes/apps/flux-system/flux-operator/app
+  path: ./kubernetes/apps/flux-system/flux-instance/app
   prune: false # Should never be deleted.
   sourceRef:
     kind: GitRepository
