--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -7,7 +7,8 @@
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["digest"],
-      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p"]
+      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p"],
+      ignoreTests: true,
     },
     {
       "description": ["Auto-merge GitHub Actions"],
@@ -15,16 +16,17 @@
       "matchDatasources": ["github-tags"],
       "automerge": true,
       "automergeType": "branch",
-      "matchUpdateTypes": ["minor", "patch", "digest"]
+      "matchUpdateTypes": ["minor", "patch", "digest"],
+      ignoreTests: true,
     },
     {
-      "description": ["Auto-merge Helm Releases"],
+      "description": ["Auto-merge KPS minors and patches"],
       "matchDatasources": ["helm", "docker"],
       "automerge": true,
       "automergeType": "pr",
       "matchUpdateTypes": ["minor", "patch"],
       "matchDepNames": ["kube-prometheus-stack"],
-      "ignoreTests": false
+      "ignoreTests": false,
     }
   ]
 }
