feat: deploy descheduler

--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./coredns.yaml
   - ./deliveryhero.yaml
   - ./democratic-csi.yaml
+  - ./descheduler.yaml
   - ./dragonfly.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
