--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -8,7 +8,7 @@
       "automergeType": "branch",
       "matchUpdateTypes": ["digest"],
       "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p"],
-      ignoreTests: true,
+      "ignoreTests": true,
     },
     {
       "description": ["Auto-merge GitHub Actions"],
@@ -17,7 +17,7 @@
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["minor", "patch", "digest"],
-      ignoreTests: true,
+      "ignoreTests": true,
     },
     {
       "description": ["Auto-merge KPS minors and patches"],
