feat: update helmfile and implement ocirepositories

--- a/kubernetes/apps/security/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/security/external-secrets/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: external-secrets
-    namespace: external-secrets
+    namespace: security
   install:
     remediation:
       retries: 3
