--- a/kubernetes/apps/kube-system/spegel/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/spegel/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: spegel
-    namespace: system
+    namespace: kube-system
   install:
     remediation:
       retries: 3
@@ -18,12 +18,6 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  values:
-    service:
-      registry:
-        hostPort: 29999
-    serviceMonitor:
-      enabled: true
-    spegel:
-      containerdSock: /run/containerd/containerd.sock
-      containerdRegistryConfigPath: /etc/cri/conf.d/hosts
+  valuesFrom:
+    - kind: ConfigMap
+      name: spegel-values
