--- a/kubernetes/apps/storage/volsync/ks.yaml
+++ b/kubernetes/apps/storage/volsync/ks.yaml
@@ -9,6 +9,14 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: snapshot-controller
+      namespace: storage
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/storage/volsync/app
   prune: true
